--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,10 @@
   --color-gray-200: #A6A6A6;
   --color-gray-300: #595959;
   --color-gray-400: #1A1A1A;
+  
   --color-gradient-input: rgba(255, 255, 255, 0.15);
+  --color-gradient-background: linear-gradient(180deg, rgba(255, 255, 255, 0.15) 0%, rgba(153, 153, 153, 0.00) 18.75%);
+  --color-gradient-content-bg: rgba(0, 0, 0, 0.15);
 
   --color-red: #A20A0A;
   --color-blue: #06369E;
